<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_category_spinner"
        style="?android:listSeparatorTextViewStyle"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_category_spinner"
        android:background="@color/colorSearchBackground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_culture_title"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/search_culture_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_harmful_organism_disease_title"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/search_harmful_organism_disease_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_all_names_title"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/search_all_names_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_active_substance"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/search_active_substance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/search_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_search"
            android:background="@drawable/background_button"
            android:padding="10dp"
            android:layout_gravity="center"/>

    </FrameLayout>

</LinearLayout>