<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="0.3">

        <ImageButton
            android:id="@+id/menu_item_catalog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/catalog_button"
            android:background="@drawable/background_button"
            android:padding="16dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:text="@string/menu_item_catalog_button_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="0.3">

        <ImageButton
            android:id="@+id/menu_item_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/search_button"
            android:background="@drawable/background_button"
            android:padding="16dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:text="@string/menu_item_search_button_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_weight="0.3">

        <ImageButton
            android:id="@+id/menu_item_contacts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/contacts_button"
            android:background="@drawable/background_button"
            android:padding="16dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:text="@string/menu_item_contacts_button_text"/>

    </LinearLayout>

</LinearLayout>